manifests/base/productcatalog/security/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: productcatalogservice
  namespace: productcatalogservice
spec:
  podSelector:
    matchLabels:
      app: productcatalogservice
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: frontend
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: checkoutservice
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: recommendationservice
      ports:
        - port: 3550
          protocol: TCP
  egress:
    - {}
